--- a/01-Modularite/Modularite.tex
+++ b/01-Modularite/Modularite.tex
@@ -5,17 +5,21 @@
 % Intro du chapitre : Trouver un questionnement, un exemple qui parle de modularité dans les systèmes biologiques:  
 %
 %%%%%%%%%%%%%%%%%%%%%
-De nombreux modèles biologiques présentent des architectures modulaires. Notre conception du monde se présente en fait sous une forme de modularité.
+L'idée de ce chapitre est d'inscrire nos travaux dans le coté modulaire des réseaux de neurones. Il nous foudra donc définir proprement ce qu'on appelle modularité, et définir les motivations pour créer une architecture modulaire. 
+D'une part, de nombreux modèles biologiques présentent des architectures modulaires. Notre conception du monde se présente en fait sous une forme de modularité.
+
+En tant qu'humain, nous comprenons le monde de notre point de vue, en le décomposant pour qu'il semble accessible : en effet notre raisonnement est modulaire, notre système social, groupes d'individus, etc, comme l'explique par exemple \cite{Morowitz1995TheMT} dans "How a mind resides in the brain".
+Nos contructions sont modulaires : programme informatique ... Il est difficile de concevoir et surtout de comprendre, en tant qu'humain, un système qui ne serait pas décomposable en modules. Prenons comme exemple les réseaux de neurones profonds : la compréhension  et l'interprétabilité ces programmes est un défi de la recherche actuelle. Pour cette interprétation, on cherche des éléments symboliques, des groupes, des communautés. 
+La décomposition des sciences elles même, par exemple, nous permet de trouver des solutions aux problèmes a des échelles différentes. Le programmeur n'a pas besoin de comprendre en profondeur quels transistors composent les circuits; l'expert.e en electronique n'a pas besoin de d'abord résoudre les équations qui régissent les mouvements ioniques au sein des transistors pour concevoir des circuits, etc. Seuls les principes régissant les comportement globaux d'un système commme le transistors ont besoins d'être connus pour utiliser ces sytèmes dans une tâche; tâche qui consituera également un module dans son ensemble et qui sera régie par des principes généraux, du transitor à l'utilisation d'un logiciel de dessin graphique. 
+Mais est ce que cette hiéarchie modulaire est essentiellement subjective ? A priori non. Une organisation modulaire est présente et calculable dans de nombreux systèmes.
+
+
 Présentation d'exemples de théories dérivées d'une modularité bio-inspirée. 
 Brooks \cite{brooks_sumsumption_85}
 
+Les modules sont également associés aux systèmes complexes. De nombreux travaux sont ainsi réalisés à la frontière entre domaines, 
 Réseaux associés aux systèmes complexes, interactions
 
-The mind, the brain and complex adaptative systems : how a mind resides in a brain (1962) \cite{Morowitz1995TheMT]}. Propose la "near decomposability"
-
-En tant qu'humain, nous comprenons le monde de notre point de vue, en le décomposant pour qu'il semble accessible : en effet notre raisonnement est modulaire, notre système social, groupes d'individus, etc. Nos contructions sont modulaires : programme informatique ... Il est difficile de concevoir et surtout de comprendre, en tant qu'individu un système qui ne serait pas décomposable en modules. Prenons comme exemple les réseaux de neurones profonds : la compréhension  et l'interprétabilité ces programmes est un défi de la recherche actuelle. Pour cette interprétation, on cherche des éléments symboliques, des groupes, des communautés. 
-La décomposition des sciences elles même, par exemple, nous permet de trouver des solutions aux problèmes a des échelles différentes. Le programmeur n'a pas besoin de comprendre en profondeur quels transistors composent les circuits; l'expert.e en electronique n'a pas besoin de d'abord résoudre les équations qui régissent les mouvements ioniques au sein des transistors pour concevoir des circuits, etc. Seuls les principes régissant les comportement globaux d'un système commme le transistors ont besoins d'être connus pour utiliser ces sytèmes dans une tâche; tâche qui consituera également un module dans son ensemble et qui sera régie par des principes généraux, du transitor à l'utilisation d'un logiciel de dessin graphique. 
-Mais est ce que cette hiéarchie modulaire est essentiellement subjective ? A priori non. Une organisation modulaire est présente et calculable dans de nombreux systèmes. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SECTION 1 introduction via la biologie, exemples 
@@ -24,32 +28,33 @@ Mais est ce que cette hiéarchie modulaire est essentiellement subjective ? A pr
 
 \section{La modularité, répandue dans les système biologiques}
 
+\subsection{Systèmes complexes }
 
+Les systèmes, dans leur échelles, sont donc complexes. Si on peut décomposer des systèmes pour les étudier, ils restent liés au sein d'un vaste écosystème. Ainsi, l'étude de la modularité des systèmes est présente au sein des approches biologiques.
 
-\subsection{Systèmes complexes -> Mettre dans introduction ? }
-
-Les systèmes, dans leur échelles, sont donc complexes. Si on peut approximer certains systèmes pour les étudier, ils restent liés au sein d'un vaste écosystème. Ainsi, l'étude de la modularité des systèmes est présente au sein des approches biologiques.
-
-"Un système complexe est un ensemble constitué d'un grand nombre d'entités en interaction dont l'intégration permet d'achever une mission commune. Les systèmes complexes sont caractérisés par des propriétés émergentes qui n'existent qu'au niveau du système et ne peuvent pas être observées au niveau de ces constituants. (wikipedia)" -> Exemple fourmilière, 
+"Un système complexe est un ensemble constitué d'un grand nombre d'entités en interaction dont l'intégration permet d'achever une mission commune. Les systèmes complexes sont caractérisés par des propriétés émergentes qui n'existent qu'au niveau du système et ne peuvent pas être observées au niveau de ces constituants. (wikipedia)". Ces constituants interagissent par des règles locales qui sont souvent simples, mais dont l'interaction forme des propriétés émergentes. Complexe ne veut pas dire que les relations et interactions sont difficiles a exprimer : un système est complexe du point de vue d'un observateur, mais les règles locales sont souvent simples. 
+-> Exemple fourmilière, 
 L'Emergence de patterns et de phénomènes d'auto-organisation (turing patterns) \cite{turing52} qui sont même utilisés pour qualifier le système complexe. 
 
 Il n'y a a priori pas de définition commune concernant ce qu'on appelle un système complexe et comment le mesurer. On pourrait plutot voir la complexité comme une façon d'étudier un objet. 
 
 Exemple de définition : complexité de Kolmogorov qui évalue la complexité par la taille du plus petit module permettant d'engendrer l'objet; une façon de définir la complexité parmi d'autres. Autre exemples : ??
 
-Complexe ne veut pas dire relation et interaction difficiles a exprimer : un système est complexe du point de vue d'un observateur, mais les règles locales sont souvent simples. 
+
 
 Systèmes liés par des équations d'évolution et des conditions initiales. 
 
 Qui dit système complexe dit système modulaire ?
 
+Réseaux sociaux, communautés de fourmis, autant d'exemples montrant une emergence auto-organisée de modules. 
+
 \subsection{Le cerveau, réseau modulaire fondamental}
 
-L'étude des réseaux biologiques, notamment, a fait émerger l'idée d'architectures modulaires. Et si on rajoute l'idée d'apprentissage, l'étude des cerveaux est une mine d'information et de questionnement quant aux structures et propriétés le permettant. 
-Les premières propositions d'études du cerveau humain datent du début du XXeme siècle. Déjà, un découpage en aires est proposé pour expliquer le fonctionnement de cet organe, notamment avec les travaux de Broca et Wernicke qui mettent en lumière des zones du cerveau qui semblent responsable du langage. Le modèle connexioniste du cerveau, formalisé à partir de ces travaux par Geschwind dans les années 60 , décompose ainsi le langage en plusieurs fonctions : la compréhension, la lecture et l'action de parler. Ce modèle n'est plus vraiment utilisé, mais la décomposition 
-Avec l'avènement des outils d'imagerie, le cerveau a pu être cartographié plus préciséement en un ensemble d'aires, agissant comme modules fonctionnels au sein d'une structure complexe; ces aires sont elles mêmes composées de modules distincts, etc. 
-
-- rétroaction entre les modules \cite{primate_cortex_91}, les pathways sont soit réciproque, soit non, à 50-50
+L'étude des réseaux biologiques, notamment, a fait émerger l'idée d'architectures modulaires. Si on considère en plus la notion d'apprentissage dans les réseaux modulaires, l'étude des cerveaux est une mine d'information et de questionnement quant aux structures et propriétés le permettant. 
+Les premières propositions d'études du cerveau humain datent du début du XXeme siècle. Déjà, un découpage en aires est proposé pour expliquer le fonctionnement de cet organe, notamment avec les travaux de Broca et Wernicke qui mettent en lumière des zones du cerveau qui semblent responsable du langage. Le modèle connexioniste du cerveau, formalisé à partir de ces travaux par Geschwind dans les années 60 , décompose ainsi le langage en plusieurs fonctions : la compréhension, la lecture et l'action de parler. Ce modèle n'est plus vraiment utilisé, mais l'idée de décomposition en modules reste valable.
+Avec l'avènement des outils d'imagerie, le cerveau a pu être cartographié plus préciséement en un ensemble d'aires, agissant comme modules fonctionnels au sein d'une structure complexe; ces aires sont elles mêmes composées de modules distincts.
+L'étude des aires et des connexions entre zones du cerveau, comme~\cite{primate_cortex_91} dans le cas du cortex visuel du primate, découpent les zones activée pour la vision en modules distincts, et montrent que ces modules sont connectés. Ces connexions, en fonction des modules, sont réciproques ou non. Les "pathsways" du cerveau désignent des modules fortement connectés. Leur détection expérimentale est réalisée en relevant des indicateurs de dépendance (corrélation, ..., en fonction des méthodes utilisées). Ainsi, \cite{Rolls2002ComputationalNO} précise la structure des différentes aires cérébrales en présentant les connexions au sein de ces aires, par exemple la structure présentée en figure~\ref{fig:cortex2} pour l'aire visuelle. 
+Les connexions du cerveau sont présentes à différentes échelles: des pathsways existent ainsi au sein de l'aire visuelle du cerveau, mais des boucles de rétroaction entre zones cérébrales sont présentes à plus grande échelle, par exemple la boucle baso-thalamo_corticale. 
 
 Le cerveau est ainsi présenté en modèle et motivation principale lorsqu'il s'agit de construire des réseaux de neurones artificiels. 
 - Nombreuses études s'appuient sur le système modulaire : le cerveau \cite{primate_cortex_91,mountcastle_columnar_1997,binzegger05}
@@ -68,16 +73,16 @@ Le cerveau est ainsi présenté en modèle et motivation principale lorsqu'il s'
 %\end{figure}
 
 \begin{figure}
-\begin{minipage}{0.48\textwidth}
+\begin{minipage}{0.5\textwidth}
 \centering
-\includegraphics[width=\textwidth]{FVE_fig2map.png}
+\includegraphics[width=0.6\textwidth]{FVE_fig2map.png}
 \caption{carte aplanie des aires du cortex visuel du macaque \cite{primate_cortex_91}}
 \label{fig:cortex1}
 \end{minipage}
-\begin{minipage}{0.48\textwidth}
+\begin{minipage}{0.5\textwidth}
 \centering
-\includegraphics[width=\textwidth]{rolls_pathways.pdf}
-\caption{pathways dans le cortex visuel du macaque \cite{Rolls2002ComputationalNO}}
+\includegraphics[width=0.6\textwidth]{rolls_pathways.pdf}
+\caption{pathways dans le cortex visuel du macaque, entre les aires listées figures de gauche. \cite{Rolls2002ComputationalNO}}
 \label{fig:cortex2}
 \end{minipage}
 \end{figure}
@@ -85,10 +90,7 @@ Le cerveau est ainsi présenté en modèle et motivation principale lorsqu'il s'
 
 %Ajouter figure du cerveau avec le schéma des aires
 
-TODO : que signifient pathways streams (vite fait ) -> on a une co de 1 vers 2 si 2 est une activation post-synaptique de 1. Mais en moyenne ? 
-associer aires des deux figures -> TEO juste a coté de TF et TH, les autres ok.
-
-
+TODO : que signifient pathways streams (vite fait )
 Finalement : 
 Cerveau présente ce qu'on peut appeler des modules, avec des connexions entre eux, avec rétroaction. 
 
@@ -114,7 +116,17 @@ Il s'agit de tirer une définition claire de ce qu'on appelle modularité. Entre
 
 \subsection{Modularité structurelle}
 
-Lorsque le système possède une structure définie de réseau, typiquement un réseau de neurones, on peut définir une modularité en terme de graphe.
+Lorsque le système possède une structure définie de réseau, typiquement un réseau de neurones, on peut définir une modularité en terme de graphe. La définition de cette modularité dépend un peu des réseaux que l'on cherche a étudier; on va essayer de lister ici les différents aspects qui se cachent sous le terme de "graphe modulaires", et dans quels domaines ils sont utilisés.
+
+\subsubsection{Mesurer la modularité structurelle d'un réseau}
+clustering coefficient
+proximity ratio
+scale free networks
+
+\cite{Harriger2012RichCO}-> mesure modularité dans le cerveau, partie "méthodes" explique les méthodes de mesure de modularité. TODO les lister
+
+Modularité : détection de communautés.
+
 
 \subsubsection{Réseaux en "petit-monde" et réseaux sans échelle}
 Definition: type de graphe dans lequel la distance moyenne entre deux noeuds est proportionnelle à log(N), N le nombre de noeuds. C'est à dire, un graphe dans lequel on trouvera un chemin assez court entre n'importe quels noeuds. 
@@ -137,21 +149,30 @@ Souvent admis que le cerveau en tant que réseau de neurones est small world.
 Exemples ?? \cite{Meunier2010ModularAH}
 Modularité hiérarchique présente l'avantage de maintenir une activité dans le réseau sans que ca ne colonise tout ni ne s'eteigne, ce qui est nécessaire pour la computation. 
 
-\subsubsection{Mesurer la modularité d'un réseau}
-clustering coefficient
-proximity ratio
-scale free networks
+
+
 
 \subsubsection{Def}
 \cite{Hilgetag2015IsTB} : différencie réseaux small world et réseaux hiararchique modulaires, et statue qu'un réseau peut etre "hiérarchique modulaire" même s'il n'est pas small world, mais possède une dimension topologique finie. 
 \cite{Meunier2010ModularAH} : statue que un réseau modulaire est small world,
 
+
+En bref : 
+- techniques de detection de communautés sur des graphes pour detecter une modularité.
+- Certaines structures se distinguent parmi les graphes modulaires :  small-world, scale-free, hiérarchique. ces structures se recoupent.^
+- Au niveau du cerveau, on n'est pas hyper d'accord sur le type de modules, mais les expés montrent une structure. 
+
 \subsection{Modularité fonctionnelle}
 
 
-\subsection{Modularité temporelle ?}
+\subsection{Modularité temporelle}
 
 La modularité s'associe aux séquences dans le cerveau. On peut donc raisonnablement définir 
+
+\subsection{Emergence d'une modularité et auto-organisation}
+
+Est ce que l'auto-organisation d'un système dénote d'une modularité ? 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % SECTION 3: quel intéret à utiliser des architectures modulaires pour l'apprentissage ? 
 % - 
