--- a/02-SOM/SOM.tex
+++ b/02-SOM/SOM.tex
@@ -1,5 +1,5 @@
 \chapter{Un réseau de neurones auto-organisé : les cartes de kohonen}
-\graphicspath{{01-Modularite/}}
+\graphicspath{{02-SOM/}}
 // Kohonen : il faut surprendre encore ! Par quel 
 bout le prendre ? 
 → Appuyer sur les cartes 1D
@@ -14,11 +14,18 @@ Ainsi, n'importe quel graphe pourrait être considéré; le plus souvent, une gr
 \section{Approche topologique des cartes de Kohonen}
 
 La notion de voisinage et de topologie est un élément clé des cartes de Kohonen. Le voisinage est en effet pris en compte lors de l'apprentissage et lors de l'interpretation des cartes. Cependant, ce voisinage est généralement défini, dans les applications des cartes, comme un bonus par rapport aux KMeans, une aide à la convergence et à la vitesse de dépliement. Pourtant c'est la l'essence même d'une carte de Kohonen: projeter des éléments sur un graphe, ce qui nous permet de faire des calculs sur des positions plutot que des données de grandes dimensions. 
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{digits002.pdf}
+\caption{Une carte de Kohonen s'organise en zones dont les poids sont proches dans l'espace des entrées. Chaque entrée présentée à la carte peut alors être représentée par la valeur de la position du BMU correspondant dans la carte. Les entrées sont projetées sur le carré $[0,1] \times [0,1]$.}
+\end{figure}
 
 \section{Principes d'organisation}
 
 
 \section{Travaux préliminaires sur les architectures de cartes de Kohonen}
+
+
 
 \section{A trier}
 De la biologie a la computation : patterns temporels des neurones impulsionnels vs SOM. 
