--- a/biblio_modularite.bib
+++ b/biblio_modularite.bib
@@ -81,6 +81,14 @@ Musio}
   year={2010},
   volume={4}
 }
+
+@article{Harriger2012RichCO,
+  title={Rich Club Organization of Macaque Cerebral Cortex and Its Role in Network Communication},
+  author={Logan Harriger and Martijn P. van den Heuvel and Olaf Sporns},
+  journal={PLoS ONE},
+  year={2012},
+  volume={7}
+}
 % Aspect computationel 
 
 @article{towards_novel_2001,
